# scatter-dex

./: .dockerignore  .env.testnet.example  .firebaserc  .gitignore  .gitmodules  DEV.md  LICENSE  Makefile  NOTICE  PAPER.md  README.md  SECURITY_ISSUES.md  TESTNET_GTM.md  docker-compose.yml  firebase.json  package-lock.json  보안_전체모듈_감사_2026-06-25.md
.next/: trace  trace-build
apps/: README.md
circuits/: authorize.circom  authorize_128.circom  authorize_64.circom  authorize_template.circom  cancel.circom  claim.circom  claim_128.circom  claim_64.circom  claim_template.circom  deposit.circom  package-lock.json  package.json  settle.circom  tags.circom  withdraw.circom  zk-manifest.json
contracts/: .gas-snapshot  README.md  foundry.toml  lcov.info  slither.config.json
deploy/: .gitignore  README.md
developers/: README.md  _meta.tsx  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
docs/: PAPER-ko.md  PAPER.md  README.md  TODO-frontend-v2.md  architecture-v2.md  demo-script-en.md  demo-script-ko.md  deployment.md  design-frontend-v2.md  design-remove-maker-from-order.md  design-shared-orderbook.md  design-stealth-address-claim.md  design-zk-settle-stealth.md  gas-cost-analysis.md  ids-draft.md  local-setup.md  mev-protection.md  migration-half-proof.md  operations-guide.md  perf-proving-analysis.md  relayer-security.md  settleWithDex-audit-log.md  test-scenarios.md  user-guide.md  zk-private-trading.md
frontend/: Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
mobile/native-prover/: .gitignore  Cargo.toml  Config.toml  README.md  build.rs
mobile/native-prover/MoproReactNativeBindings/: MoproFfi.podspec  package.json  ubrn.config.yaml
mobile/native-prover/MoproReactNativeBindings/MoproFfiFramework.xcframework/: Info.plist
mobile/native-prover/MoproReactNativeBindings/android/: CMakeLists.txt  build.gradle
mobile/native-prover/MoproReactNativeBindings/cpp/: mopro-ffi.cpp
mobile/native-prover/MoproReactNativeBindings/src/: index.tsx
mobile/native-prover/src/: circom.rs  lib.rs
mobile/native-prover/test-vectors/circom/: cancel.wasm  claim.wasm  claim_final.zkey  deposit_final.zkey  withdraw.wasm
mobile/native-prover/tests/bindings/circom/: test_multiplier2.kts  test_multiplier2.swift
mobile/native-prover/tests/bindings/ffi/: test_ffi_hello_world.kts  test_ffi_hello_world.swift
(+1540 files in other folders)
