
[package]
name = "native-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# Adapters for different proof systems
[features]
default = ["uniffi"]
uniffi = ["mopro-ffi/uniffi"]
flutter = ["mopro-ffi/flutter"]
wasm = ["mopro-ffi/wasm"]

[dependencies]
mopro-ffi = { version = "=0.3.5" }
thiserror = "2.0.12"
anyhow = "1.0.99"

# CIRCOM_DEPENDENCIES

circom-prover = "0.1"
rust-witness  = "0.1"
num-bigint    = "0.4.0"
# Native Poseidon-BN254 implementation that matches circomlibjs's
# output (verified by `light-poseidon`'s own circom-compat tests).
# Replaces the per-hash WebView round-trip in `ZKBridge.poseidonHash`.
light-poseidon = "0.4"
ark-bn254     = "0.5"
ark-ff        = { version = "0.5", default-features = false }
# circomlibjs-compatible BabyJubJub EdDSA. Replaces the WebView calls
# `derive_eddsa_key` (prv2pub) and `sign_eddsa` (signPoseidon). Default
# feature `blake-hash` pulls `ppv-lite86` whose generic SIMD backend is
# `unimplemented!()` on non-x86 targets (aarch64-apple-* / Android arm64),
# panicking inside Blake-512. The `aarch64` feature swaps to the `blake`
# crate which uses a portable C impl — works on every target we ship.
babyjubjub-rs = { version = "0.0.11", default-features = false, features = ["aarch64"] }
# Re-export the same `ff_ce` and `poseidon-rs` crates that babyjubjub-rs
# uses internally so we can convert `Point.x`/`Point.y` (a `poseidon_rs::Fr`)
# to a decimal `BigUint` string from our wrapper.
ff            = { package = "ff_ce", version = "0.11", features = ["derive"] }
poseidon-rs   = "0.0.8"
    
# HALO2_DEPENDENCIES
# NOIR_DEPENDENCIES
# GNARK_DEPENDENCIES

[build-dependencies]
# CIRCOM_BUILD_DEPENDENCIES

witnesscalc-adapter = "0.1"
rust-witness = "0.1"
    
# HALO2_BUILD_DEPENDENCIES
# NOIR_BUILD_DEPENDENCIES
# GNARK_BUILD_DEPENDENCIES

[dev-dependencies]
mopro-ffi = { version = "=0.3.5", features = ["uniffi-tests"] }

# CIRCOM_DEV_DEPENDENCIES

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
    
# HALO2_DEV_DEPENDENCIES
# NOIR_DEV_DEPENDENCIES
# GNARK_DEV_DEPENDENCIES

[target.wasm32-unknown-unknown.dependencies]
mopro-ffi = { version = "=0.3.5", features = ["wasm"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

    